fix(styles): solve horizontal scroll in the issue #257

--- a/packages/search-engine/src/components/Footer/Footer.css
+++ b/packages/search-engine/src/components/Footer/Footer.css
@@ -1,6 +1,5 @@
 .footer__container {
   grid-area: footer;
-  width: 100%;
   height: 130px;
 }
 
