--- a/packages/user-account/src/components/header/header.css
+++ b/packages/user-account/src/components/header/header.css
@@ -15,7 +15,7 @@
   .header-nav__user-info {
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
 }
   
   .user-info {
